[project]
name = "chat-app"
version = "0.1.0"
description = "Chat Interno"
authors = [
    {name = "SophiCodes",email = "sophicodes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.16"
mkdocstrings = "^0.30.0"
mkdocstrings-python = "^1.16.12"

